hover na listagem dos posts

--- a/styles/boots-bones.css
+++ b/styles/boots-bones.css
@@ -162,6 +162,7 @@
 .mdin-blog-title {
   font-family: "Exo 2", sans-serif;
   margin:.5em 0;
+  text-decoration: underline;
 }
 
 .mdin-carousel-control-prev,
