--- a/styles/boots-bones.css
+++ b/styles/boots-bones.css
@@ -159,11 +159,11 @@
   opacity:.5;
 }
 
-.mdin-blog-title {
-  font-family: "Exo 2", sans-serif;
-  margin:.5em 0;
+.mdin-blog-title:hover {
   text-decoration: underline;
 }
+
+
 
 .mdin-carousel-control-prev,
 .mdin-carousel-control-next{
