--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ License: GNU General Public License
  
 }
 
+.blog-destaque--title:hover {
+    text-decoration: underline;
+}
+
 .blog-casos-list-item-title a {
     color:#000;
     text-decoration:none;
